--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 50px;
+  /* padding: 50px; */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: pink;
 }
@@ -23,6 +23,34 @@ body {
   /* margin-left: 150px; */
 }
 
-a {
-  color: #00B7FF;
+.description p {
+  color: blue;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 300%;
+  width: 600px;
+  margin-left: 75px;
+  padding-top: 20px;
+  clear: left;
+}
+
+.role {
+  float: left;
+  width: 20%;
+  height: 100px;
+  margin: 5px;
+  margin-left: 50px;
+  text-align: center;
+  padding-top: 50px;
+  background: palegreen;
+}
+
+.role a {
+  font-size: 200%;
+  color: hotpink;
+}
+
+.roles:after{
+  content: "";
+  display: table;
+  clear: both;
 }
